deploy-webappui.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ibm-linksui
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ibm-linksui-deployment
        version: v1
    spec:
      containers:
        - name: ibm-linksui
          image: ascattolin/ibm-linksui
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ibm-linksui-service
spec:
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 32001
      name: http
  type: NodePort
  selector:
    name: ibm-linksui-deployment
